compiler/e2e/test/snapshot/semantic_element/wf_check/negative_marker_not_satisfied/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: clean_run
---
stderr:
error: unsatisfied predicate
   ╭─ compiler/e2e/test/snapshot/semantic_element/wf_check/negative_marker_not_satisfied/main.pnx:22:28
   │
19 │         marker not Marker[T]
   │                ------------- the required predicate was declared here
   ·
22 │ public type InstMyStruct = WithRequirement[MyStruct]
   │                            ^^^^^^^^^^^^^^^^^^^^^^^^^ the predicate `marker not main::Marker[main::MyStruct]` is not satisfied

error: Compilation aborted due to 1 error(s)



stdout:
